force-app/main/default/objects/Lot__c/Lot__c.object-meta.xml
<CustomObject>
    <description>A specific amount of product that was (or will be) purchased and made available for sale to customers.</description>
    <label>Lot</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>