force-app/main/default/objects/Lot__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The agricultural product that this Lot represents.</description>
    <inlineHelpText>The agricultural product that this Lot represents.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lots</relationshipLabel>
    <relationshipName>Lots</relationshipName>
    <type>Lookup</type>
</CustomField>