force-app/main/default/objects/Lot__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The agricultural product producer that this lot of product comes from.</description>
    <inlineHelpText>The agricultural product producer that this lot of product comes from.</inlineHelpText>
    <label>Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lots Produced</relationshipLabel>
    <relationshipName>Lots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>