force-app/main/default/objects/Lot__c/validationRules/ProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductRequired</fullName>
    <active>true</active>
    <description>Enforces the population of the Product field, which cannot be done with normal settings.</description>
    <errorConditionFormula>Product__c = null</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is a required field.</errorMessage>
</ValidationRule>